fixed column spacing for responsive

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 /* 
 <!--BootStrap Portfolio CSS--> */
+h1{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 
 .container {
     display: flex;
@@ -20,7 +24,7 @@
   #name{
     display: flex;
     justify-content: center;
-    background: #4aaaa5;  
+    background: #aa4a85;
     width: 200px;
     color: #ffffff;
  }
@@ -41,8 +45,10 @@
       align-content: space-between;
   }
 
+  
   .form-group{
     width: 960px;
+    padding: 10px;
   }
 
   button[type=submit] {
